Added functionality for lab techs to view/edit lab procedures

--- a/iTrust2/src/main/resources/views/layout.html
+++ b/iTrust2/src/main/resources/views/layout.html
@@ -231,6 +231,10 @@ a {
 								id="editdemographics-labtech">Edit Demographics</a></li>
 						</ul>
 					</li>
+					<li><a href="/iTrust2/labtech/viewLabRequests" 
+							id="labRequests-labtech">Lab Requests</a>
+					</li>
+					
 				</ul>
 				<ul id="extra-dropdown" class="nav navbar-nav">
 					<li><a
