--- a/iTrust2/src/main/resources/views/layout.html
+++ b/iTrust2/src/main/resources/views/layout.html
@@ -188,6 +188,7 @@ a {
 							      id="editVaccinations-personnel">Edit Vaccinations</a></li>
 						</ul>
 					</li>
+					<li><a href="/iTrust2/hcp/viewPatientRecords" id="emergencyHealthRecords">Lookup Patient</a></li>
 				</ul>
 				<ul id="patient-dropdown" class="nav navbar-nav">
 					<li class="dropdown"><a class="dropdown-toggle"
@@ -223,6 +224,7 @@ a {
 								id="editdemographics-er">Edit Demographics</a></li>
 						</ul>
 					</li>
+					<li><a href="/iTrust2/hcp/viewPatientRecords" id="emergencyHealthRecords">Lookup Patient</a></li>
 				</ul>
 				<ul id="lt-dropdown" class="nav navbar-nav">
 					<li class="dropdown"><a class="dropdown-toggle"
