--- a/iTrust2/src/main/resources/views/hcp/documentOfficeVisit.html
+++ b/iTrust2/src/main/resources/views/hcp/documentOfficeVisit.html
@@ -399,10 +399,16 @@
               $scope.prescriptions.splice($index, 1);
             }
 
+            
+            $scope.removeTag = function(p) {
+            	return p.slice(p.indexOf('_') + 1);
+            }
+            
             //call initally
             resetDiagnosisForm();
             resetPrescriptionForm();
             resetLabRequestForm();
+           	
 
 
           });
@@ -818,48 +824,50 @@
                 </div>
 
 
+
                 <!-- Lab request panel -->
-                <div class="col-md-4">
-                  <div class="panel panel-info">
-                    <div class="panel-heading">
-                      <h4>Lab Requests</h4>
-                    </div>
-                    <div class="panel-body">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="panel panel-info">
+                      <div class="panel-heading">
+                        <h4>Lab Requests</h4>
+                      </div>
+                      <div class="panel-body">
 
 
-                      <!-- CHOOSE LAB PROCEDURE -->
-                      <div class="form-group row">
-                        <div class="col-xs-6">
-                          <label>Lab Procedure:</label>
-                        </div>
-                        <div class="col-xs-6 radio-box">
-                          <div class="form-check">
-                            <ul style="list-style: none;">
-                              <li ng-repeat="l in labProcedures"><label> <input
-                                  type="radio" ng-model="$parent.labProcedure" name="{{l.name}}"
-                                  value="{{l.code}}" required="true" /> {{l.code}}
-                              </label></li>
-                            </ul>
+                        <!-- CHOOSE LAB PROCEDURE -->
+                        <div class="form-group row">
+                          <div class="col-xs-6">
+                            <label>Lab Procedure:</label>
+                          </div>
+                          <div class="col-xs-6 radio-box">
+                            <div class="form-check">
+                              <ul style="list-style: none;">
+                                <li ng-repeat="l in labProcedures"><label> <input
+                                    type="radio" ng-model="$parent.labProcedure" name="{{l.name}}"
+                                    value="{{l.code}}" required="true" /> {{l.code}}
+                                </label></li>
+                              </ul>
+                            </div>
                           </div>
                         </div>
-                      </div>
 
-                      <!-- CHOOSE LAB TECH -->
-                      <div class="form-group row">
-                        <div class="col-xs-6">
-                          <label>Lab Technician:</label>
-                        </div>
-                        <div class="col-xs-6 radio-box">
-                          <div class="form-check">
-                            <ul style="list-style: none;">
-                              <li ng-repeat="l in labTechs"><label> <input type="radio"
-                                  ng-model="$parent.labTech" name="{{l.username}}"
-                                  value="{{l.username}}" required="true" /> {{l.username}}
-                              </label></li>
-                            </ul>
+                        <!-- CHOOSE LAB TECH -->
+                        <div class="form-group row">
+                          <div class="col-xs-6">
+                            <label>Lab Technician:</label>
+                          </div>
+                          <div class="col-xs-6 radio-box">
+                            <div class="form-check">
+                              <ul style="list-style: none;">
+                                <li ng-repeat="l in labTechs"><label> <input
+                                    type="radio" ng-model="$parent.labTech" name="{{l.username}}"
+                                    value="{{l.username}}" required="true" /> {{l.username}}
+                                </label></li>
+                              </ul>
+                            </div>
                           </div>
                         </div>
-                      </div>
 
 
                         <!-- CHOOSE PRIORITY -->
@@ -868,15 +876,15 @@
                             <label>Priority:</label>
                           </div>
                           <div class="col-xs-6 radio-box">
-                          <div class="form-check">
-                            <ul style="list-style: none;">
-                              <li ng-repeat="p in priorities"><label> <input type="radio"
-                                  ng-model="$parent.priority" name="{{p}}"
-                                  value="{{p}}" required="true" /> {{p}}
-                              </label></li>
-                            </ul>
+                            <div class="form-check">
+                              <ul style="list-style: none;">
+                                <li ng-repeat="p in priorities"><label> <input
+                                    type="radio" ng-model="$parent.priority" name="{{p}}"
+                                    value="{{p}}" required="true" /> {{removeTag(p)}}
+                                </label></li>
+                              </ul>
+                            </div>
                           </div>
-                        </div>
 
                         </div>
 
@@ -886,10 +894,11 @@
                             <label>Comments:</label>
                           </div>
                           <div class="col-xs-6">
-                             <input class="form-control" name="commentsBox" ng-model="comments" required="true" type="text">
+                            <input class="form-control" name="commentsBox" ng-model="comments"
+                              required="true" type="text">
                           </div>
                         </div>
-                        
+
                         <!-- ADD BUTTON -->
                         <div class="form-group row text-center">
                           <button class="btn btn-success" ng-click="fillLabRequests()"
@@ -905,7 +914,7 @@
                                 <div class="row" ng-repeat="l in labRequests">
                                   <div class="col-md-2">{{l.labProcedure}}</div>
                                   <div class="col-md-2">{{l.labTech}}</div>
-                                  <div class="col-md-2">{{l.priority}}</div>
+                                  <div class="col-md-2">{{removeTag(l.priority)}}</div>
                                   <div class="col-md-4">{{l.comments}}</div>
                                   <div class="col-md-2">
                                     <button class="btn btn-danger btn-xs"
@@ -921,6 +930,7 @@
                       </div>
                     </div>
                   </div>
+                </div>
 
 
 
